--- a/Frontend/src/components/shareModal/ShareModal.module.css
+++ b/Frontend/src/components/shareModal/ShareModal.module.css
@@ -17,8 +17,8 @@
 }
 
 .modal {
-    background: #1e1e1e;
-    color: #fff;
+    background: var(--primary);
+    color: var(--text-color);
     border-radius: 24px;
     padding: 20px;
     width: 800px;
@@ -74,7 +74,7 @@
     flex: 1;
     padding: 10px;
     border: 1px solid #444;
-    background: #333;
+    background: var(--secondary);
     color: #fff;
     width: 100%;
     gap: 0px;
@@ -84,10 +84,11 @@
 .permissionDropdown {
     padding: 10px;
     border: none;
-    background: #1F1F23;
-    color: #fff;
+    background: var(--secondary);
+    color: var(--text-color);
     width: 70px;
     height: 40px;
+    border-radius: 12px;
     gap: 0px;
     box-shadow: 0px 1px 3.5px 0px #FFFFFF40;
 }
@@ -108,5 +109,4 @@
     left: 126px;
     gap: 20px;
     border-radius: 12px;
-
 }
