--- a/Frontend/src/pages/submission/Submission.module.css
+++ b/Frontend/src/pages/submission/Submission.module.css
@@ -22,7 +22,7 @@
 .brief .card {
     width: 200px;
     height: 60px;
-    background: #323232;
+    background: #e8e8e8;
     padding: 40px;
     text-align: center;
     border-radius: 10px;
@@ -34,7 +34,7 @@
 }
 
 .brief .card p {
-    color: #fff;
+    color: #000;
     margin: auto;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .table th {
-    color: #fff !important;
+    color: var(--text-color) !important;
     font-weight: 500;
 }
 
@@ -60,7 +60,7 @@
     padding: 10px 16px;
     text-align: left;
     border: 1px solid #C4C4C4;
-    color: #FFFFFFEB;
+    color: var(--text-color);
 }
 .pieChart{
     width: 400px;
