Refactor components and styles for improved consistency; update color scheme and accessibility features across multiple pages

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -93,6 +93,7 @@ span {
   left: 50px;
 }
 
-.Toastify__toast-container {
+.Toastify {
   width: fit-content !important;
+  display: none !important;
 }
