--- a/Frontend/src/pages/signup/Signup.module.css
+++ b/Frontend/src/pages/signup/Signup.module.css
@@ -6,6 +6,11 @@
     flex-direction: column;
     gap: 20px;
     position: relative;
+    background-color: #171923;
+    
+}
+.auth span {
+    color: #fff;
 }
 
 .form {
